@@ -1,3 +1,8 @@
+Sun Dec 22 10:16:08 2013  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/rubygems.rb (module Gem):  Fix comment for
+	  Gem::load_path_insert_index.
+
 Sun Dec 22 04:07:55 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (ruby_gc_set_params): don't show obsolete warnings for
